--- a/about/about.html
+++ b/about/about.html
@@ -52,7 +52,7 @@
           <p>&copy; 2023</p>
         </div>
         <div class="col-md-6 d-flex justify-content-center">
-          <a href="https://www.umn.ac.id/?gclid=Cj0KCQjwz6ShBhCMARIsAH9A0qVQt97EhNy_s9RZUcjBO5DhdSBqRIu4afR-F624j4SQ2hUJ7KnAqnQaAhKlEALw_wcB"><img src="../images/logo-akreditasi.png" class="img-fluid"></a>
+          <a href="https://www.umn.ac.id/?gclid=Cj0KCQjwz6ShBhCMARIsAH9A0qVQt97EhNy_s9RZUcjBO5DhdSBqRIu4afR-F624j4SQ2hUJ7KnAqnQaAhKlEALw_wcB"><img src="./images/logo-akreditasi.png" class="img-fluid"></a>
         </div>
       </div>
     </footer>
