--- a/coba2niko/parallax.html
+++ b/coba2niko/parallax.html
@@ -12,7 +12,7 @@
 
     <nav class="navbar navbar-expand-lg fixed-top navbar-dark shadow-5-strong navbar-blur">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#">Navbar</a>
+          <a class="navbar-brand" href="#">Guide Map</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -30,20 +30,6 @@
               <li class="nav-item">
                 <a class="nav-link" href="#kuliner">Kuliner</a>
               </li>
-              <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                  Dropdown
-                </a>
-                <ul class="dropdown-menu">
-                  <li><a class="dropdown-item" href="#">Action</a></li>
-                  <li><a class="dropdown-item" href="#">Another action</a></li>
-                  <li><hr class="dropdown-divider"></li>
-                  <li><a class="dropdown-item" href="#">Something else here</a></li>
-                </ul>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link disabled">Disabled</a>
-              </li>
             </ul>
             <form class="d-flex" role="search">
               <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
@@ -54,7 +40,7 @@
       </nav>
 
 
-     <div class="container-fluid p-0 mg-0">
+  <div class="container-fluid p-0 mg-0">
 
     <section id="awal">
         <div class="parallax intro">
@@ -63,83 +49,42 @@
                   <div class="content-box">
                     <div class="content-bg"></div>
                     <div class="content">
-                        <h1>JAKARTA</h1>
+                        <h3>JAKARTA</h3>
                     </div>
                 </div>
                 </div>
-            </div>
-            <div class="row">
-              <div class="col-sm-12 justify-content-center">
-                <div class="container text-center my-3">
-                  <h2 class="font-weight-light">Bootstrap 4 - Multi Item Carousel</h2>
-                  <div class="row mx-auto my-auto">
-                      <div id="recipeCarousel" class="carousel slide w-100" data-ride="carousel">
-                          <div class="carousel-inner w-100" role="listbox">
-                              <div class="carousel-item active">
-                                  <div class="col-md-4">
-                                      <div class="card card-body">
-                                          <img class="img-fluid" src="http://placehold.it/380?text=1">
-                                      </div>
-                                  </div>
-                              </div>
-                              <div class="carousel-item">
-                                  <div class="col-md-4">
-                                      <div class="card card-body">
-                                          <img class="img-fluid" src="http://placehold.it/380?text=2">
-                                      </div>
-                                  </div>
-                              </div>
-                              <div class="carousel-item">
-                                  <div class="col-md-4">
-                                      <div class="card card-body">
-                                          <img class="img-fluid" src="http://placehold.it/380?text=3">
-                                      </div>
-                                  </div>
-                              </div>
-                              <div class="carousel-item">
-                                  <div class="col-md-4">
-                                      <div class="card card-body">
-                                          <img class="img-fluid" src="http://placehold.it/380?text=4">
-                                      </div>
-                                  </div>
-                              </div>
-                              <div class="carousel-item">
-                                  <div class="col-md-4">
-                                      <div class="card card-body">
-                                          <img class="img-fluid" src="http://placehold.it/380?text=5">
-                                      </div>
-                                  </div>
-                              </div>
-                              <div class="carousel-item">
-                                  <div class="col-md-4">
-                                      <div class="card card-body">
-                                          <img class="img-fluid" src="http://placehold.it/380?text=6">
-                                      </div>
-                                  </div>
-                              </div>
-                          </div>
-                          <a class="carousel-control-prev w-auto" href="#recipeCarousel" role="button" data-slide="prev">
-                              <span class="carousel-control-prev-icon bg-dark border border-dark rounded-circle" aria-hidden="true"></span>
-                              <span class="sr-only">Previous</span>
-                          </a>
-                          <a class="carousel-control-next w-auto" href="#recipeCarousel" role="button" data-slide="next">
-                              <span class="carousel-control-next-icon bg-dark border border-dark rounded-circle" aria-hidden="true"></span>
-                              <span class="sr-only">Next</span>
-                          </a>
-                      </div>
+                <div class="img-prov">
+                  <img src="../src/gambar/jakarta/jakarta.jpg" alt="">
+                  <div class="desc-provinsi">
+                    <p>Jakarta (pengucapan bahasa Indonesia: [dʒaˈkarta] ( simak)), atau secara resmi bernama Daerah Khusus Ibukota Jakarta (disingkat DKI Jakarta) adalah ibu kota negara dan kota terbesar di Indonesia. Menurut sistem pembagian administratif Indonesia, Jakarta merupakan provinsi dengan status daerah khusus. Sementara menurut pengertian secara umum, Jakarta merupakan kota metropolitan. Jakarta terletak di pesisir bagian barat laut Pulau Jawa. Dahulu pernah dikenal dengan beberapa nama di antaranya </p>
                   </div>
-                  <h5 class="mt-2">Advances one slide at a time</h5>
-              </div>
-              </div>
-            </div>
-        </div>
+                </div>
+            </div>       
     </section>
     
     <section id="wisata">
         <div class="parallax content">
-           <div class="row">
-
-           </div>
+          <div id="carouselExample" class="carousel slide">
+            <div class="carousel-inner">
+              <div class="carousel-item active d-flex justify-content-center">
+                <img src="../src/gambar/jakarta/wisata/Dufan.png" class="d-block w-45" alt="...">
+              </div>
+              <div class="carousel-item d-flex justify-content-center">
+                <img src="..." class="d-block w-45" alt="...">
+              </div>
+              <div class="carousel-item d-flex justify-content-center">
+                <img src="..." class="d-block w-45" alt="...">
+              </div>
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Next</span>
+            </button>
+          </div>
 
         </div>
         <!-- <div class="parallax blank"></div> -->
