prallax minta tolong bang jo

--- a/coba2niko/parallax.html
+++ b/coba2niko/parallax.html
@@ -12,7 +12,7 @@
 
     <nav class="navbar navbar-expand-lg fixed-top navbar-dark shadow-5-strong navbar-blur">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#">Guide Map</a>
+          <a class="navbar-brand" href="#">TravelIndo</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -41,7 +41,6 @@
 
 
   <div class="container-fluid p-0 mg-0">
-
     <section id="awal">
         <div class="parallax intro">
             <div class="row">
@@ -53,13 +52,15 @@
                     </div>
                 </div>
                 </div>
-                <div class="img-prov">
-                  <img src="../src/gambar/jakarta/jakarta.jpg" alt="">
-                  <div class="desc-provinsi">
-                    <p>Jakarta (pengucapan bahasa Indonesia: [dʒaˈkarta] ( simak)), atau secara resmi bernama Daerah Khusus Ibukota Jakarta (disingkat DKI Jakarta) adalah ibu kota negara dan kota terbesar di Indonesia. Menurut sistem pembagian administratif Indonesia, Jakarta merupakan provinsi dengan status daerah khusus. Sementara menurut pengertian secara umum, Jakarta merupakan kota metropolitan. Jakarta terletak di pesisir bagian barat laut Pulau Jawa. Dahulu pernah dikenal dengan beberapa nama di antaranya </p>
+                <div class="row">
+                <div class="col-md-5 col-sm-4 img-prov">
+                  <img src="../src/gambar/jakarta/jakarta.jpg" alt="jakarta">
+                  <div class="col-md-7 col-sm-8 desc-provinsi">
+                    <p>Jakarta (pengucapan bahasa Indonesia: [dʒaˈkarta] ( simak)), atau secara resmi bernama asdfjlksajdfihblkansdofuhasldmfnk asdbpihjopfnbknsadifbpjoapdsf oiansdoifj adsofnoiblvaosdf </p>
                   </div>
                 </div>
             </div>       
+          </div>
     </section>
     
     <section id="wisata">
@@ -91,8 +92,40 @@
     </section>
 
     <section id="kuliner">   
-    <div class="parallax footer"></div>
-    <div class="parallax blank"></div>
+    <div class="justify-content-center align-items-center parallax footer">
+      <div class="container kuliner-container ">
+        <div class="kuliner-1">
+        <div class="row">
+          <div class="col-md-4 kuliner-img">
+            <img src="../src/gambar/jakarta/kuliner/kerak-telor.jpg" alt="">
+          </div>
+          <div class="col-md-8 kuliner-desc">
+            <p>Kerak telor mantep Eui anying</p>
+          </div>
+        </div>
+      </div>
+        <div class="kuliner-2">
+          <div class="row">
+            <div class=" col-md-8 kuliner-desc">
+              <p>Belilah odading mang oleh karena rasanya bisa jadi iron man</p>
+            </div>
+          <div class=" col-md-4 kuliner-img">
+            <img src="../src/gambar/jakarta/kuliner/soto-betawi.jpg" alt="">
+          </div>
+        </div>
+      </div>
+        <div class="kuliner-3">
+          <div class="row">
+          <div class=" col-md-4 kuliner-img">
+            <img src="../src/gambar/jakarta/kuliner/gabus-pucung.jpeg" alt="">
+          </div>
+          <div class="col-md-8 kuliner-desc">
+            <p>Aku ingin ke meikarta epan beli liquid cihuy</p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
     </section>
 
 </div> 
