--- a/coba2niko/parallax.html
+++ b/coba2niko/parallax.html
@@ -52,13 +52,13 @@
                     </div>
                 </div>
                 </div>
-                <div class="row">
-                <div class="col-md-5 col-sm-4 img-prov">
+                <div class="row justify-content-center">
+                <div class=" col-sm-4 img-prov justify-content-center">
                   <img src="../src/gambar/jakarta/jakarta.jpg" alt="jakarta">
-                  <div class="col-md-7 col-sm-8 desc-provinsi">
+                </div>
+                  <div class="col-md-7 mt-4 desc-provinsi">
                     <p>Jakarta (pengucapan bahasa Indonesia: [dʒaˈkarta] ( simak)), atau secara resmi bernama asdfjlksajdfihblkansdofuhasldmfnk asdbpihjopfnbknsadifbpjoapdsf oiansdoifj adsofnoiblvaosdf </p>
                   </div>
-                </div>
             </div>       
           </div>
     </section>
@@ -93,8 +93,10 @@
 
     <section id="kuliner">   
     <div class="justify-content-center align-items-center parallax footer">
+      <br>
+      <br>
       <div class="container kuliner-container ">
-        <div class="kuliner-1">
+        <div class="kuliner-1 align-items-center align-text-end">
         <div class="row">
           <div class="col-md-4 kuliner-img">
             <img src="../src/gambar/jakarta/kuliner/kerak-telor.jpg" alt="">
