--- a/Homescreen/homescreen.html
+++ b/Homescreen/homescreen.html
@@ -3,6 +3,9 @@
 <head>
   <title>Map</title>
   <link rel="stylesheet" href="homescreen.css">
+  <style>
+    /* Styles... */
+  </style>
 </head>
 <body>
   <div class="container">
@@ -22,7 +25,7 @@
       <div class="image-container">
         <img src="../img/Indo_map.png" alt="Image" class="map"/>
 
-        <div class="point" style="left: 142px; top: 257px;" onclick="showDetails('Padang')"></div>
+        <div class="point" style="left: 142px; top: 257px;" onclick="showDetails('Padang')">Details about Padang</div>
         <div class="point" style="left: 98px; top: 118px;" onclick="showDetails('Medan')"></div>
         <div class="point" style="left: 364px; top: 232px;" onclick="showDetails('Pontianak')"></div>
         <div class="point" style="left: 557px; top: 249px;" onclick="showDetails('Samarinda')"></div>
@@ -40,7 +43,14 @@
   <script>
     function showDetails(place) {
       var detailsBox = document.getElementById("detailsBox");
-      detailsBox.innerHTML = "Details about " + place;
+      detailsBox.innerHTML = `
+        <img src="download.jpg" alt="Gallery Image"><br/><br/>
+        <div class="tooltip-content">
+          <p>Wisata yang pertama adalah pantai Sanur. Tempat ini adalah tujuan utama pengunjung yang ingin menikmati keindahan pantai di Denpasar. Pantai ini selalu ramai oleh turis lokal maupun mancanegara.</p>
+          <p>Wisata ini adalah spot paling cocok untuk menyaksikan pemandangan matahari terbit yang eksotis. Ombak yang ada di wisata ini pun juga menjadi pilihan yang tepat untuk para pengunjung yang senang berselancar.</p>
+        </div>
+        <br/><br/><a href="https://www.google.com">See More...</a>
+      `;
       detailsBox.style.display = "block";
       setTimeout(function() {
         detailsBox.style.display = "none";
@@ -49,23 +59,77 @@
   </script>
   <script src="https://cdn.jsdelivr.net/npm/react/umd/react.production.min.js" crossorigin></script>
 
-<script
-  src="https://cdn.jsdelivr.net/npm/react-dom/umd/react-dom.production.min.js"
-  crossorigin></script>
-
-<script
-  src="https://cdn.jsdelivr.net/npm/react-bootstrap@next/dist/react-bootstrap.min.js"
-  crossorigin></script>
+  <script
+    src="https://cdn.jsdelivr.net/npm/react-dom/umd/react-dom.production.min.js"
+    crossorigin></script>
+  
+  <script
+    src="https://cdn.jsdelivr.net/npm/react-bootstrap@next/dist/react-bootstrap.min.js"
+    crossorigin></script>
 </body>
 </html>
 
-<!-- Padang 142, 257
-    Medan 98, 118
-    Pontianak 364, 232
-    Samarinda 557, 249
-    Makassar 615, 375
-    Manado 749, 189
-    Jakarta 301, 409
-    Denpasar 506, 479
-    Jayapura 1130, 305
-    Sorong 908, 259-->
+<!-- <style>
+  .container {
+    position: relative;
+    display: inline-block;
+  }
+  
+  .hover-box {
+    display: none;
+    position: absolute;
+    top: 100%;
+    left: 0;
+    padding: 10px;
+    background-color: #f9f9f9;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.15);
+    width: 500px;
+  }
+  
+  .container:hover .hover-box {
+    display: block;
+  }
+  
+  .hover-box img {
+    display: block;
+    margin: 0 auto; /* Center the image horizontally */
+  }
+  
+  .gallery {
+    position: relative;
+    width: 300px;
+    height: 200px;
+  }
+  
+  .prev,
+  .next {
+    position: absolute;
+    top: 50%;
+    font-size: 30px;
+    font-weight: bold;
+    padding: 10px;
+    color: white;
+    background-color: black;
+    cursor: pointer;
+  }
+  
+  .prev {
+    left: 10px;
+  }
+  
+  .next {
+    right: 10px;
+  }
+  </style>
+  
+  <div class="container">
+    <div class="hover-box">
+      <img src="download.jpg" alt="Gallery Image"><br/><br/>
+      Wisata yang pertama adalah pantai Sanur. Tempat ini adalah tujuan utama pengunjung yang ingin menikmati keindahan pantai di Denpasar. Pantai ini selalu ramai oleh turis lokal maupun mancanegara.
+      Wisata ini adalah spot paling cocok untuk menyaksikan pemandangan matahari terbit yang eksotis. Ombak yang ada di wisata ini pun juga menjadi pilihan yang tepat untuk para pengunjung yang senang berselancar.
+      <br/><br/><a href="https://www.google.com">See More...</a>
+    </div>
+    Hover over me
+  </div> -->
