--- a/Homescreen/homescreen.html
+++ b/Homescreen/homescreen.html
@@ -25,7 +25,7 @@
       <div class="image-container">
         <img src="../img/Indo_map.png" alt="Image" class="map"/>
 
-        <div class="point" style="left: 142px; top: 257px;" onclick="showDetails('Padang')">Details about Padang</div>
+        <div class="point" style="left: 142px; top: 257px;" onclick="showDetails('Padang')"></div>
         <div class="point" style="left: 98px; top: 118px;" onclick="showDetails('Medan')"></div>
         <div class="point" style="left: 364px; top: 232px;" onclick="showDetails('Pontianak')"></div>
         <div class="point" style="left: 557px; top: 249px;" onclick="showDetails('Samarinda')"></div>
