--- a/Homescreen/homescreen.html
+++ b/Homescreen/homescreen.html
@@ -8,6 +8,13 @@
   </style>
 </head>
 <body>
+  <ul class="navbar">
+    <li>Travelindo</li>
+    <li><a href="#">Beranda</a></li>
+    <li><a href="#">Tentang</a></li>
+    <li><a href="#">Produk</a></li>
+    <li><a href="#">Kontak</a></li>
+  </ul>
   <div class="container">
     <Navbar collapseOnSelect expand="lg" bg="primary" variant="dark">
       <Container>
